Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -81,8 +81,10 @@ SCC <span class="o">&lt;-</span> <span class="kp">readRDS</span><span class="p">
 <p>as long as each of those files is in your current working directory (check by calling dir() and see if those files are in the listing).
 Assignment</p>
 
-<p>The overall goal of this project is to explore the National Emissions Inventory database and see what it say about fine particulate matter pollution in the United states over the 10-year period 1999–2008. You may use any R package you want to support your analysis.
-Questions</p>
+<p>The overall goal of this project is to explore the National Emissions Inventory database and see what it say about fine particulate matter pollution in the United states over the 10-year period 1999–2008. </p>
+
+<h2>
+<a name="questions" class="anchor" href="#questions"><span class="octicon octicon-link"></span></a>Questions</h2>
 
 <p>The following questions and tasks in this project analysis are what we mainly concerned. For each question/task I make a single plot. Unless specified, and use certain plotting system in R to make my plot.</p>
 
